--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,3 +31,9 @@
       @apply bg-white dark:bg-gray-900;
     }
   }
+
+  @layer base {
+  body {
+    @apply bg-slate-100 dark:bg-slate-900;
+  }
+  }
